# cpp-project-template

./: INSTALL.md  README.md
misc/config/: logger.conf
src/: CMakeLists.txt
src/main/: CMakeLists.txt
src/main/common/: CMakeLists.txt
src/main/cppunit_demo/: CMakeLists.txt
src/main/cppunit_demo/cppunit_demo/: CMakeLists.txt  common.h  cppunit_demo_main.cpp
src/main/cppunit_demo/cppunit_demo/demo/: CMakeLists.txt  calculator.cpp  calculator.h  calculator_test1.cpp  calculator_test1.h  calculator_test2.cpp  calculator_test2.h  calculator_test3.cpp  calculator_test3.h  calculator_test4.cpp  calculator_test4.h  calculator_test5.cpp  calculator_test5.h  string_to_int_unittest_exe.cpp
src/main/cppunit_demo/cppunit_demo/demo/test/: CMakeLists.txt  calculator_unittest.cpp  calculator_unittest.h
src/main/cppunit_demo/cppunit_demo/test/: CMakeLists.txt  dotest.cpp  logger.conf  test.h.in
src/share/cppunit/: CMakeLists.txt
